<resources>
    <string name="app_name">Kotlin_lesson_Neco</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="avatar">avatar</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Имя</string>
    <string name="name2">Фамилия</string>
    <string name="name3">Отчество</string>
    <string name="done">Done</string>
</resources>